@@ -92,7 +92,7 @@
       <menuitem name="SearchFindMenu" action="SearchFind"/>
       <menuitem name="SearchFindNextMenu" action="SearchFindNext"/>
       <menuitem name="SearchFindPreviousMenu" action="SearchFindPrevious"/>
-      <menuitem name="SearchInteractiveSearchMenu" action="SearchInteractiveSearch"/>
+      <menuitem name="SearchIncrementalSearchMenu" action="SearchIncrementalSearch"/>
       <placeholder name="SearchOps_1" />
       <separator/>
       <placeholder name="SearchOps_2" />
