@@ -681,7 +681,7 @@ set_sensitivity_according_to_tab (GeditWindow *window,
 				  state_normal);
 
 	action = gtk_action_group_get_action (window->priv->action_group,
-					      "SearchInteractiveSearch");
+					      "SearchIncrementalSearch");
 	gtk_action_set_sensitive (action,
 				  state_normal);
 
