@@ -1,3 +1,13 @@
+2006-12-02  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/gedit-commands-search.c:
+	* gedit-ui.h:
+	* gedit-ui.xml:
+	* gedit-window.c:
+
+	Use "Incremental Search" instead of "Interactive Search" as
+	discussed in bug #347539.
+
 2006-12-01  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit/plugins/filebrowser/gedit-file-browser-widget.c: add
